<resources>

    <!-- Home -->

    <string name="app_name">GPS Setter</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="xposed_desc">Set location</string>
    <string name="search">Search</string>
    <string name="address">United States</string>
    <string name="add_favourite">Add favourite</string>
    <string name="add_fav_in_database">Add fav in database</string>
    <string name="show_fav_list">Show fav list</string>
    <string name="favourites">Favourites</string>
    <string name="address_not_found">Address not found</string>
    <string name="cant_save">Can\'t save</string>
    <string name="location_set">Location set</string>
    <string name="title">Location set notification</string>
    <string name="des">Show notification when location will set</string>
    <string name="location_unset">Location unset</string>
    <string name="no_internet">No internet</string>
    <string name="search_hint">"search eg. new york or 37.7749,-122.4194"</string>



    <!-- Errors -->
    <string name="error_xposed_module_missing">Xposed module is not enabled</string>
    <string name="error_xposed_module_missing_desc">Enable this module in LSPosed Manager.\n\nDon’t have LSPosed?\n\t1. Install the Riru or Zygisk module from Magisk Manager\n\t2. Install the “Riru or Zygisk - LSPosed” module from Magisk Manager\n\t3. Open this app again</string>
    <string name="error_missing_root">No root access</string>
    <string name="error_missing_root_desc">Root access is necessary in order for this app to manage overlays and work properly.</string>





    <!-- About -->

    <string name="about">About</string>
    <string name="about_tittle">GPS Setter</string>
    <string name="about_info">A module which will set your location where you want without enable mock location.</string>

    <!-- Update -->

    <string name="download_manager_description">Downloading update…</string>
    <string name="update_button">Update</string>
    <string name="update_available">Update available</string>
    <string name="bs_update_download_failed">Failed</string>


    <!-- Dialog -->

    <string name="add_fav_dialog_title">Add favourite</string>
    <string name="dialog_button_add">Add</string>
    <string name="dialog_button_ok">OK</string>
    <string name="location_not_select">Location not select</string>
    <string name="save">Save</string>
    <string name="progress_dialog_searching">Searching...</string>



    <!-- SettingActivity -->

    <string name="xposed">Xposed</string>
    <string name="advance_hook">Hook system location</string>
    <string name="settings">Settings</string>
    <string name="settings_of_accuracy">Accuracy</string>
    <string name="preference_category_general">General</string>
    <string name="enter_valid_input">Enter valid number</string>
    <string name="delete_favourite_item">Delete favourite</string>
    <string name="title_activity_settings">Settings</string>
    <string name="check_update">Check for updates</string>
    <string name="check_update_summary">Automatically check for latest version on Github</string>
    <string name="advanced_summary">Hook system for better Location set (Need Reboot)</string>
    <string name="random_position">Random position</string>
    <string name="random_position_summary">Location position will be random around set location</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="stop">Stop</string>
    <string name="start_spoofing">Set location</string>
    <string name="current_address">current address</string>
    <string name="app_update_failed">App update fail</string>

    <!-- Import/Export Strings -->
    <string name="export_favourites">Export Favorites</string>
    <string name="import_favourites">Import Favorites</string>
    <string name="export_successful">Favorites exported successfully.</string>
    <string name="export_failed">Export failed</string>
    <string name="export_failed_no_uri">Export failed: No file selected.</string>
    <string name="no_favorites_to_export">No favorites to export.</string>
    <string name="import_failed_no_uri">Import failed: No file selected.</string>
    <string name="import_successful_count">%d favorites imported successfully.</string>
    <string name="no_valid_favorites_in_file">No valid favorites found in the file.</string>
    <string name="import_failed_generic">Import failed: %s</string>
    <string name="invalid_file_format">Import failed: Invalid file format.</string>

    <!-- Random Positioning Strings -->
    <string name="random_positioning_title">Random Positioning</string>
    <string name="enable_random_positioning">Enable Random Positioning</string>
    <string name="time_interval_seconds_hint">Time Interval (seconds)</string>
    <string name="distance_radius_meters_hint">Radius (meters)</string>
    <string name="invalid_input_positive_number">Please enter a positive number.</string>
    <string name="random_positioning_select_center_prompt">Please select a central point on the map for random positioning.</string>
    <string name="random_positioning_started">Random positioning started.</string>
    <string name="random_positioning_stopped">Random positioning stopped.</string>

</resources>