<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:title="@string/Search"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_search_24"/>

    <item
        android:id="@+id/add_fav"
        android:title="@string/add_favourite"
        app:showAsAction="never"/>


    <item
        android:id="@+id/get_favourite"
        android:title="@string/favourites"
        app:showAsAction="never"/>

    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/about"
        android:title="@string/about"
        app:showAsAction="never"/>



</menu>